# Player

./: CMakeLists.txt  MFPU.pro  README.md  about.ui  button.cpp  button.h  cfgwriter.cpp  display.cpp  display.h  filereader.cpp  filereader.h  filter.ui  fontreader.cpp  fontreader.h  headereditor.cpp  headereditor.h  headereditor.ui  insertingsettings.cpp  insertingsettings.h  insertingsettings.ui  label.cpp  label.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mfpudataparser.cpp  mfpuplaymanager.cpp  mfpuplaymanager.h  mylineedit.cpp  mylineedit.h  page_creator.cpp  page_creator.h  resources.qrc  sbireader.h  sbitoolreader.h  settings.cpp  settings.ui  text_editor.cpp  text_editor.h  (+3 more)
src/: main.cpp  pult.h  utils.h
src/gui/: about.cpp  about.ui  button.cpp  button.h  display.cpp  display.h  label.cpp  label.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui  treemanager.cpp  treemanager.h
src/parser/: mfpudataparser.cpp  mfpudataparser.h
src/reader/: cfgwriter.cpp  cfgwriter.h  filereader.cpp  filereader.h  fontreader.cpp  fontreader.h  sbireader.cpp  sbireader.h  sbitoolreader.cpp  sbitoolreader.h
